--- a/book---pay.html
+++ b/book---pay.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Book + Pay</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
-  <link rel="stylesheet" type="text/css" href="css/book---pay.css?crc=519952229" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4066738434"/>
+  <link rel="stylesheet" type="text/css" href="css/book---pay.css?crc=3919020369" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_book---pay.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_book---pay.css?crc=4069100438" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_book---pay.css?crc=52631909" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -89,34 +89,36 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clip_frame grpelem" id="u60864" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="170" height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
-      <!-- m_editable region-id="editable-static-tag-U7237-BP_infinity" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem shared_content" id="u7237-4" data-muse-uid="U7237" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u7237-4_content"><!-- content -->
-       <p>Book Your Tickets</p>
+     </div>
+     <!-- m_editable region-id="editable-static-tag-U7237-BP_infinity" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix colelem shared_content" id="u7237-4" data-muse-uid="U7237" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u7237-4_content"><!-- content -->
+      <p>Book Your Tickets</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="clearfix colelem shared_content" id="pu7238-22" data-content-guid="pu7238-22_content"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U7238-BP_infinity" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="clearfix grpelem shared_content" id="u7238-22" data-muse-uid="U7238" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u7238-22_content"><!-- content -->
+       <p id="u7238-2"><span id="u7238">Please fill in the Booking Registration Form to indicate which event(s) you wish to attend.</span></p>
+       <p id="u7238-3">&nbsp;</p>
+       <p id="u7238-5"><span id="u7238-4">Tickets for the 2019 Reunion events are priced as follows:</span></p>
+       <ul class="list0 nls-None" id="u7238-14">
+        <li id="u7238-7">Friday Reunion - £55.00</li>
+        <li id="u7238-9">Saturday Social - £35.00</li>
+        <li id="u7238-11">Weekend Party Animal&nbsp; - £85.00</li>
+        <li id="u7238-13">Bring a Partner on Saturday- add £35.00</li>
+       </ul>
+       <p id="u7238-15">&nbsp;</p>
+       <p id="u7238-17"><span id="u7238-16">The Family Fun Day on Saturday afternoon is free of charge.&nbsp; Bring some nice weather please!</span></p>
+       <p id="u7238-18">&nbsp;</p>
+       <p id="u7238-20">All payments are made via PayPal.</p>
+      </div>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U7243-BP_infinity" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="rgba-background rounded-corners clearfix grpelem shared_content" id="u7243-7" data-muse-uid="U7243" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u7243-7_content"><!-- content -->
+       <p id="u7243-5"><span id="u7243-3">BOOKING CLOSES:<br/></span>Friday 29th March 2019</p>
       </div>
       <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U7238-BP_infinity" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix colelem shared_content" id="u7238-22" data-muse-uid="U7238" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u7238-22_content"><!-- content -->
-      <p id="u7238-2"><span id="u7238">Please fill in the Booking Registration Form to indicate which event(s) you wish to attend.</span></p>
-      <p id="u7238-3">&nbsp;</p>
-      <p id="u7238-5"><span id="u7238-4">Tickets for the 2019 Reunion events are priced as follows:</span></p>
-      <ul class="list0 nls-None" id="u7238-14">
-       <li id="u7238-7">Friday Reunion - £55.00</li>
-       <li id="u7238-9">Saturday Social - £35.00</li>
-       <li id="u7238-11">Weekend Party Animal&nbsp; - £85.00</li>
-       <li id="u7238-13">Bring a Partner on Saturday- add £35.00</li>
-      </ul>
-      <p id="u7238-15">&nbsp;</p>
-      <p id="u7238-17"><span id="u7238-16">The Family Fun Day on Saturday afternoon is free of charge.&nbsp; Bring some nice weather please!</span></p>
-      <p id="u7238-18">&nbsp;</p>
-      <p id="u7238-20">All payments are made via PayPal.</p>
-     </div>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7243-BP_infinity" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="rgba-background rounded-corners clearfix colelem shared_content" id="u7243-7" data-muse-uid="U7243" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u7243-7_content"><!-- content -->
-      <p id="u7243-5"><span id="u7243-3">BOOKING CLOSES:<br/></span>Friday 29th March 2019</p>
-     </div>
-     <!-- /m_editable -->
      <div class="clearfix colelem" id="pu7250-4"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U7250-BP_infinity" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="rgba-background rounded-corners clearfix grpelem shared_content" id="u7250-4" data-muse-uid="U7250" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u7250-4_content"><!-- content -->
@@ -486,19 +488,14 @@ var muReCAPTCHA2OnloadCallback = function() {
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u60864"><!-- image -->
+      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u60864"><!-- image -->
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="133" height="125" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
       </div>
-      <!-- m_editable region-id="editable-static-tag-U7237-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
-      <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U7238-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="clearfix colelem placeholder" data-placeholder-for="u7238-22_content"><!-- placeholder node --></span>
+     <!-- m_editable region-id="editable-static-tag-U7237-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7243-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="rgba-background rounded-corners clearfix colelem placeholder" data-placeholder-for="u7243-7_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu7238-22_content"><!-- placeholder node --></span>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu7250-4"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U7250-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <span class="rgba-background rounded-corners clearfix grpelem placeholder" data-placeholder-for="u7250-4_content"><!-- placeholder node --></span>
@@ -805,7 +802,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <ul class="AccordionWidget clearfix grpelem" id="accordionu14850" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- vertical box -->
        <li class="AccordionPanel clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u14852-3_0_content">&nbsp;</p></div><div class="AccordionPanelContent disn gradient clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15468-4_0_content">Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15497-4_0_content">About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15476-4_0_content">News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15519-4_0_content">Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15482-4_0_content">Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15489-4_0_content">Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u93916" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u93919-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u93919-4_0_content">Memories</p></div></a></div></nav></div></li>
       </ul>
-      <div class="clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
+      <div class="rounded-corners clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
@@ -1124,7 +1121,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <ul class="AccordionWidget clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="accordionu14850"><!-- vertical box -->
        <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u14851"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem temp_no_id" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u14852-3"><!-- content --><span class="placeholder" data-placeholder-for="u14852-3_0_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn gradient clearfix colelem temp_no_id" data-orig-id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="menuu15463"><!-- vertical box --><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="index.html" data-href="page:U93" data-orig-id="u15465"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15468-4"><!-- content --><span class="placeholder" data-placeholder-for="u15468-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="about.html" data-href="page:U252" data-orig-id="u15495"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15497-4"><!-- content --><span class="placeholder" data-placeholder-for="u15497-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="news.html" data-href="page:U264" data-orig-id="u15474"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15476-4"><!-- content --><span class="placeholder" data-placeholder-for="u15476-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="programme.html" data-href="page:U276" data-orig-id="u15516"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15519-4"><!-- content --><span class="placeholder" data-placeholder-for="u15519-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="booking.html" data-href="page:U12766" data-orig-id="u15481"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15482-4"><!-- content --><span class="placeholder" data-placeholder-for="u15482-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="attending.html" data-href="page:U324" data-orig-id="u15488"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15489-4"><!-- content --><span class="placeholder" data-placeholder-for="u15489-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u93916"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u93919-4"><!-- content --><span class="placeholder" data-placeholder-for="u93919-4_0_content"><!-- placeholder node --></span></div></a></div></nav></div></li>
       </ul>
-      <span class="clip_frame grpelem placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
+      <span class="rounded-corners clip_frame grpelem placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
      </div>
      <!-- m_editable region-id="editable-static-tag-U7237-BP_600" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
