--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=4062724278" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4066738434"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3842806669" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=452719937" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=3829660728" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -89,12 +89,12 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clip_frame grpelem" id="u60864" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="170" height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
-      <!-- m_editable region-id="editable-static-tag-U2350-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem shared_content" id="u2350-4" data-muse-uid="U2350" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u2350-4_content"><!-- content -->
-       <p>Contact the Reunion Committee:</p>
-      </div>
-      <!-- /m_editable -->
      </div>
+     <!-- m_editable region-id="editable-static-tag-U2350-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix colelem shared_content" id="u2350-4" data-muse-uid="U2350" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u2350-4_content"><!-- content -->
+      <p>Contact the Reunion Committee:</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U2522-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix colelem shared_content" id="u2522-15" data-muse-uid="U2522" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u2522-15_content"><!-- content -->
       <p>You can contact the 2018 Reunion Committee by using the contact form on this page or you can e-mail us directly using the e-mail addresses below.</p>
@@ -221,7 +221,7 @@ var muReCAPTCHA2OnloadCallback = function() {
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <div class="clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
+      <div class="rounded-corners clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="133" height="125" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
@@ -341,7 +341,7 @@ var muReCAPTCHA2OnloadCallback = function() {
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <span class="clip_frame grpelem placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
+      <span class="rounded-corners clip_frame grpelem placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
      </div>
      <!-- m_editable region-id="editable-static-tag-U2350-BP_802" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u2350-4_content"><!-- placeholder node --></span>
@@ -405,7 +405,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       </div>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="984" data-content-above-spacer="984" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer" data-offset-top="984" data-content-above-spacer="984" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
@@ -492,7 +492,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       </div>
      </div>
     </div>
-    <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="1008" data-content-above-spacer="1008" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
