--- a/memories.html
+++ b/memories.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Memories</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
-  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=3767899115" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4066738434"/>
+  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=345962484" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_memories.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=4103837422" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=3945189694" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -207,7 +207,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <div class="clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
+      <div class="rounded-corners clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="133" height="125" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
@@ -323,7 +323,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <span class="clip_frame grpelem placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
+      <span class="rounded-corners clip_frame grpelem placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
      </div>
      <!-- m_editable region-id="editable-static-tag-U6080-BP_807" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u6080-4_content"><!-- placeholder node --></span>
