--- a/programme.html
+++ b/programme.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Programme</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4066738434"/>
-  <link rel="stylesheet" type="text/css" href="css/programme.css?crc=4010984260" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=511993315"/>
+  <link rel="stylesheet" type="text/css" href="css/programme.css?crc=4158170748" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_programme.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_programme.css?crc=482626624" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_programme.css?crc=3794794526" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -79,8 +79,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu transition clearfix colelem" id="u94009" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u94011-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u94011-4_0_content">Memories</p></div></a>
        </div>
       </nav>
-      <div class="clip_frame grpelem" id="u60864" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- image -->
-       <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="170" height="159" src="images/blank.gif?crc=4208392903"/>
+      <div class="clip_frame grpelem" id="u113455" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
+       <img class="block temp_no_img_src" id="u113455_img" data-orig-src="images/logo%20spark%20cropped.png?crc=48106106" alt="" width="149" height="154" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U2116-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -256,8 +256,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
-      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u60864"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="133" height="125" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
+      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u113455"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark%20cropped.png?crc=48106106" alt="" width="133" height="137" data-orig-id="u113455_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U2116-BP_1160" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -291,8 +291,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <ul class="AccordionWidget clearfix grpelem" id="accordionu14850" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- vertical box -->
        <li class="AccordionPanel clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn gradient clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u93916" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u93919-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Memories</p></div></a></div></nav></div></li>
       </ul>
-      <div class="rounded-corners clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u60864"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
+      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u113455"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark%20cropped.png?crc=48106106" alt="" width="92" height="95" data-orig-id="u113455_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U2116-BP_800" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
